# variance-yfinance

./: .cursorrules  .geminiignore  .gitignore  .pre-commit-config.yaml  .scratchpad  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  QA_ACTION_PLAN.md  QA_AUDIT_REPORT_2024-12-23.md  QA_REPORT_MarketDataService.md  QA_STRATEGY_SUMMARY.md  QA_SUMMARY_2025-12-23.md  QA_VALIDATION_REPORT.md  README.md  README_YFINANCE.md  RUFF_VIOLATIONS.md  analyze_portfolio.py  coverage.json  get_market_data.py  inspect_futures.py  notes  pyproject.toml  requirements.txt  sample_positions.csv  screen  variance  variance-hybrid  variance-new  variance-system-prompt.md  variance-tui  vol_screener.py  vol_screener_all.json
.claude/agents/: architect.md  dataflow.md  developer.md  qa.md  quant.md
.gemini/: GEMINI.md
.github/workflows/: ci.yml
config/: claude_persona.md  market_config.json  runtime_config.json  screener_profiles.json  strategies.json  strategy_mappings.json  system_config.json  trading_rules.json  trading_rules.reorganized.json  trading_rules.v2.json
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  BLUEPRINT.md  CONCEPTS.md  CONFIGURATION.md  DEVELOPMENT_PRIORITIES.md  DIAGNOSTICS_REPORT.txt  DXLINK-INTEGRATION-SUMMARY.md  HANDOFF.md  HANDOFF_CHECKLIST.md  OPERATIONS.md  PRODUCTION_READINESS_AUDIT.md  PROXY_METHODOLOGY.md  QUANT_PLAYBOOK.md  QUICK_REFERENCE.md  RFC_001_TRADING_DESK_PERSONAS.md  RFC_004_OI_LIQUIDITY_FILTER.md  RFC_005_TUI_DATA_ADVISORY.md  RFC_006_BROKER_BRIDGE.md  RFC_007_SYSTEMATIC_STRATEGY_ALLOCATION.md  STRATEGY_PLAYBOOK.md  TECHNICAL_ARCHITECTURE.md  TERMINOLOGY.md  TEST_COVERAGE.md  TROUBLESHOOTING.md  tastylive_strategies.json.deprecated
docs/adr/: 0001-domain-objects.md  0002-strategy-pattern.md  0003-frozen-dataclasses.md  0004-logarithmic-space.md  0005-execution-isolation.md  0006-hybrid-functional-oop.md  0007-proxy-iv-futures.md  0008-multi-provider-architecture.md  0009-retail-efficiency-gate.md  0010-vrp-threshold-calibration-hv90.md  0011-volatility-spec-separation.md  0012-vrp-measurement-methodology.md  0013-compression-ratio-decision-framework.md  0014-volatility-trend-ratio-rename.md  template.md
docs/analysis/: hv252_vs_hv90_tradeoffs.md  skew-risk-analysis.md  vrp-ratio-vs-spread-analysis.md  whipsaw_protection_audit.md
docs/archive/: RFC_001_TRADING_DESK_PERSONAS.md  RFC_002_PAIRS_VOLATILITY_SCANNER.md  RFC_003_SECTOR_DIVERGENCE_REPORT.md  RFC_006_BROKER_BRIDGE.md  RFC_008_HV_RANK_TRAP_DEBATE.md  RFC_009_LOW_VOL_TRAP_DEBATE.md  RFC_010_TERM_STRUCTURE_ANALYSIS.md  RFC_011_RELATIVE_VALUE_SPECIFICATIONS.md  (+10 more)
positions/: dummy_portfolio.csv
scripts/: analyze_logs.py  analyze_portfolio.py  audit_screener.py  check_all_api_fields.py  claude_agent.py  common.py  compare_gold_options.py  compare_hv_sources.py  config_loader.py  debug_nq_dxlink.py  diagnose_api_health.py  diagnose_correlation.py  diagnose_dxlink_access.py  diagnose_futures_filtering.py  diagnose_futures_symbology.py  diagnose_screener.py  diagnose_symbol.py  diagnose_tastytrade.py  explore_earnings.py  fetch_cl_16delta.py  fetch_cl_chain.py  format_screener_output.py  get_market_data.py  portfolio_parser.py  research_integrity_impact.py  research_liquidity_compare.py  research_mechanics_impact.py  research_proxy_bake_off.py  research_tastytrade_data.py  strategy_detector.py  strategy_loader.py  test_dxlink_candles.py  test_dxlink_candles_oauth.py  test_dxlink_direct.py  test_dxlink_fallback_integration.py  test_dxlink_hv_integration.py  test_futures_dxlink.py  test_futures_pure_tastytrade.py  test_pure_tastytrade.py  test_sdk_candles.py  (+7 more)
tests/: QA_REPORT_FINDING_001_VRP_TACTICAL_FLOOR.md  QA_REPORT_HEDGE_DETECTION.md  __init__.py  conftest.py  test_actions.py  test_analyze_portfolio.py  test_api_failure_modes.py  test_base_strategy.py  test_cli_integration.py  test_cluster.py  test_concurrency.py  test_config_loader.py  test_etf_sector_handling.py  test_futures_proxy_correlation.py  test_get_market_data.py  test_hv_vrp_unit_consistency.py  test_integration.py  test_iv_percentile_fix.py  test_logging.py  test_market_clock.py  test_market_data_integration.py  test_market_data_service.py  test_portfolio.py  test_portfolio_parser.py  test_position.py  test_production_scale.py  test_quant_audit_fixes.py  test_registry.py  test_short_theta_strategy.py  test_signal_synthesis.py  test_specs.py  test_strategy_detector.py  test_strategy_factory.py  test_stress_box_accuracy.py  test_tastytrade_client.py  test_tastytrade_futures_options.py  test_triage_engine.py  test_triage_engine_edge_cases.py  test_vol_screener.py  test_vol_screener_cli.py  (+3 more)
tests_vibe/: README.md  conftest.py  test_vibe_concentration_exposure.py  test_vibe_iv_normalization.py  test_vibe_parsing_guards.py  test_vibe_screener_filters.py  test_vibe_triage_guards.py
util/: compare_nvrp_impact.py  debug_yfinance.py  explore_earnings.py  research_lab.py  rich_tui_poc.py  sample_positions.csv  showcase_portfolio.csv  test_yfinance_direct.py
watchlists/: default-watchlist.csv  tasty-default.csv
(+191 files in other folders)
