[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "variance"
version = "0.1.0"
description = "Systematic Volatility Engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "rich>=12.0.0",
    "scipy>=1.7.0"
]

[project.scripts]
variance-analyze = "variance.analyze_portfolio:main"
variance-screener = "variance.vol_screener:main"
variance-tui = "variance.tui_renderer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear, SIM: flake8-simplify
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"] # Ignore line-too-long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
