[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "variance"
version = "0.1.0"
description = "Systematic Volatility Engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "rich>=12.0.0",
    "scipy>=1.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.14.0",
    "pre-commit>=4.0.0"
]

[project.scripts]
variance-analyze = "variance.analyze_portfolio:main"
variance-screener = "variance.vol_screener:main"
variance-tui = "variance.tui_renderer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear, SIM: flake8-simplify
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line-too-long (handled by formatter)
    "E402",   # Module import not at top of file (intentional for config loading)
    "E722",   # Bare except (documented in RUFF_VIOLATIONS.md, research scripts only)
    "SIM102", # Nested if simplification (style preference)
    "SIM103", # Negated condition simplification (style preference)
    "SIM105", # Use contextlib.suppress (style preference)
    "SIM116", # Dictionary instead of if/elif (style preference)
    "SIM117", # Single with statement (style preference)
    "B904",   # Exception chaining (not critical for research scripts)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
# Exclude venv and other artifacts
exclude = ["venv", ".git", "__pycache__", "build", "dist"]

[[tool.mypy.overrides]]
module = ["pandas.*", "yfinance.*", "rich.*", "scipy.*"]
ignore_missing_imports = true
